--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Decibel Disaster Management System</title>
 		<meta name="description" content="Disaster Management System" />
-		<link rel="icon" href="/logo.png" />
+		<link rel="icon" href="/logo-light.png" />
 	</head>
 
 	<body>
